--- a/api/InventarioAPI/.env
+++ b/api/InventarioAPI/.env
@@ -1,6 +1,6 @@
-DATABASE_HOST=bsm6jh0tftubtdc8nbkr-mysql.services.clever-cloud.com
+DATABASE_HOST=bflimmdqiqqxwvij3c7a-mysql.services.clever-cloud.com
 DATABASE_PORT=3306
-DATABASE_NAME=bsm6jh0tftubtdc8nbkr
-DATABASE_USER=umcjkuwdd10ucezz
-DATABASE_PASSWORD=PH0FHYbxMxzcfu6r0zFI
-DATABASE_URI=mysql://umcjkuwdd10ucezz:PH0FHYbxMxzcfu6r0zFI@bsm6jh0tftubtdc8nbkr-mysql.services.clever-cloud.com:3306/bsm6jh0tftubtdc8nbkr
+DATABASE_NAME=bflimmdqiqqxwvij3c7a
+DATABASE_USER=uqgn7g9ulazrk1rm
+DATABASE_PASSWORD=NovM9X9gP8AjO1c7KC0i
+DATABASE_URI=mysql://uqgn7g9ulazrk1rm:NovM9X9gP8AjO1c7KC0i@bflimmdqiqqxwvij3c7a-mysql.services.clever-cloud.com:3306/bflimmdqiqqxwvij3c7a
