--- a/api/InventarioAPI/package.json
+++ b/api/InventarioAPI/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
+    "mime-types": "^2.1.30",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "path": "^0.12.7",
