--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
     "stylish-sidebar": "^1.1.2",
     "web-vitals": "^1.1.2",
     "wouter": "^2.7.4"
